--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 a {
   color: #444;
   text-decoration: none;
@@ -22,14 +28,40 @@ label {
 #registrationAverage {
   display: none;
 }
-#formStart {
-  display: block;
+#formStart,
+#boxMeeting,
+#formStop,
+#resume {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* display: block; */
 }
+#boxMeeting {
+  text-align: center;
+}
+
+#registrationAverage,
+.registrationBox {
+  flex-direction: column;
+}
+
 #boxMeeting,
 #formStop,
 #resume {
   display: none;
 }
+#boxMeeting {
+  font-size: 18px;
+}
+
+#resume {
+  background: #f2f2f2;
+  margin-top: 15px;
+}
+
 dl > dt {
   font-weight: bold;
   width: 150px;
@@ -42,7 +74,9 @@ dl > dd {
   vertical-align: text-top;
 }
 #poweredBy {
+  text-align: center;
   font-size: 14px;
+  margin: 8px;
 }
 #heart {
   color: red;
