--- a/src/style.css
+++ b/src/style.css
@@ -20,14 +20,97 @@ p {
 label {
   display: block;
 }
+input {
+  border: 1px solid #999;
+  border-radius: 3px;
+  font-size: 18px;
+  padding: 8px;
+  margin: 5px;
+}
+button {
+  background: #5d9cec;
+  color: white;
+  border: none;
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 3px;
+  min-width: 38px;
+}
+button:hover {
+  background: #4a89dc;
+}
+button.red {
+  background: #ed5565;
+}
+button.red:hover {
+  background: #da4453;
+}
+button.green {
+  background: #48cfad;
+}
+button.green:hover {
+  background: #37bc98;
+}
+input {
+  border: 1px solid #999;
+  border-radius: 3px;
+  font-size: 18px;
+  padding: 8px;
+  margin: 5px;
+}
+dl {
+  width: 300px;
+  font-size: 14px;
+  margin: 5px 0;
+}
+dl > dt {
+  font-weight: bold;
+  width: 155px;
+  display: inline-block;
+}
+dl > dd {
+  width: 140px;
+  display: inline-block;
+  margin-inline-start: 0;
+  vertical-align: text-top;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #222;
+  color: white;
+  box-shadow: 2px 2px 10px #777;
+  padding: 15px 0;
+  margin-bottom: 20px;
+}
+.header * {
+  margin: 0;
+  padding: 5px;
+  font-weight: 200;
+}
+
 #alert {
   display: none;
-  color: red;
   font-weight: bold;
+  margin: 8px;
+  background: rgba(237, 55, 86, 0.6);
+  border: 1px solid rgb(237, 85, 86);
+  font-size: 18px;
+  padding: 8px;
+  border-radius: 3px;
+  color: white;
 }
 #registrationAverage {
   display: none;
 }
+
+#registrationAverage,
+.registrationBox {
+  flex-direction: column;
+}
+
 #formStart,
 #boxMeeting,
 #formStop,
@@ -37,17 +120,10 @@ label {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* display: block; */
 }
 #boxMeeting {
   text-align: center;
 }
-
-#registrationAverage,
-.registrationBox {
-  flex-direction: column;
-}
-
 #boxMeeting,
 #formStop,
 #resume {
@@ -56,23 +132,12 @@ label {
 #boxMeeting {
   font-size: 18px;
 }
-
 #resume {
   background: #f2f2f2;
   margin-top: 15px;
+  padding-bottom: 15px;
 }
 
-dl > dt {
-  font-weight: bold;
-  width: 150px;
-  display: inline-block;
-}
-dl > dd {
-  width: 200px;
-  display: inline-block;
-  margin-inline-start: 0;
-  vertical-align: text-top;
-}
 #poweredBy {
   text-align: center;
   font-size: 14px;
